syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.example.orderservice.grpc";

package orderservice;

service OrderService {
  rpc GetOrders(OrderRequest) returns (OrderResponse) {}
}

message OrderRequest {
  string userId = 1;
}

message OrderResponse {
  repeated Order orders = 1;
}

message Order {
  string orderId = 1;
  string userId = 2;
  string productId = 3;
  int32 qty = 4;
  int32 unitPrice = 5;
  int32 totalPrice = 6;
  string createdAt = 7;
}
